k8s/kube-znn-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-znn-nginx
  labels:
    app: kube-znn-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-znn-nginx
  template:
    metadata:
      labels:
        app: kube-znn-nginx
    spec:
      containers:
      - name: kube-znn-nginx
        image: kube-znn-nginx:v18.0.1
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "4Mi"
            cpu: "5m"
          limits:
            memory: "16Mi"
            cpu: "25m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
          timeoutSeconds: 1
          failureThreshold: 1
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 2
          periodSeconds: 2
          timeoutSeconds: 1
          failureThreshold: 1
---
apiVersion: v1
kind: Service
metadata:
  name: kube-znn-nginx
  labels:
    app: kube-znn-nginx
spec:
  selector:
    app: kube-znn-nginx
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
