k8s/network-policy-block.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-kube-znn-ingress
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: kube-znn-simple-fixed
  policyTypes:
  - Ingress
  ingress: []  # Block all incoming traffic
